--- a/gb/23/3/30/n13961985.md
+++ b/gb/23/3/30/n13961985.md
@@ -48,32 +48,30 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/28/n13960433.md#1">观神韵赞“真善忍”加拿大人购法轮功书籍</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/28/n13960480.md#1">联邦政府现允许获准工作的非加拿大人买房</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/28/n13960483.md#1">从美国移居加拿大 女子发视频赞加国引注目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364346.md#1">联邦拟设新规 降低石油天然气排放35%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364320.md#1">胡子十一月 了解前列腺癌及筛查</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528715.md#1">因坚持守法遭解雇 前CEO状告中国工商银行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528729.md#1">经济不明和全球动荡 越来越多加国人推迟退休</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360732.md#1">墨西哥南部丛林发现失落的玛雅古城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352322.md#1">【古道人生】父亲嫌女婿家变穷悔婚 女儿守婚约得好结果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359422.md#1">为何为逝世的家属“做七”? “七”是个吉数？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362702.md#1">【未解之谜】CIA禁书（下）新一次文明更迭倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359235.md#1">新官夫妇遇生死劫 “芙蓉屏风”了却今生缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364308.md#1">【新闻欣视角】最后冲刺！贺锦丽川普谁胜出？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364380.md#1">【时事金扫描】朝兵上战场就懞圈 遭俄军误击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361778.md#1">【全球新闻】投票倒计时 华盛顿架护栏严阵以待</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363178.md#1">距地球150亿英里 NASA旅行者1号“打破沉默”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363151.md#1">华为鸿蒙系统内藏多少不为人知的黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363160.md#1">洪金宝自称前世是一头牛 武功胜过甄子丹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363143.md#1">汤唯被大衣披肩价格惊呆 逗趣表情笑翻网友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363848.md#1">新《神鬼奇航》明年制作 没有强尼戴普</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364365.md#1">因大战小粉红爆红 英钢琴家卡瓦纳或游台湾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363981.md#1">50岁李奥纳多自认不再年轻 想要当爸爸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363370.md#1">这一物可清理马克杯里的茶渍 效果超乎想像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363289.md#1">2024世界最美丽女性榜单出炉 美的标准是什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361469.md#1">“杜布罗夫尼克”旅游 欣赏中世纪古城之美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360331.md#1">精神内耗毁健康 专家教你五种方法克服</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363035.md#1">中医推荐10分钟足部按摩操 助你摆脱水肿困扰</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545549.md#1">【军事情报局】美对台军售大升级 或逾200亿美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540704.md#1">咖啡因会干扰睡眠期间大脑恢复 尤其对年轻人</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/30/n13961985.htm">加拿大目标2035年转清洁能源 耗资巨大</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/3/30/n13961985.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
